--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.html
@@ -15,7 +15,7 @@
         <s><strong>{{terminName}}</strong></s>
       </ng-template>
     </h2>
-    <ion-text class="ion-text-wrap" color="medium"> <b style="color: white;">{{terminStartTime | date
+    <ion-text class="ion-text-wrap" color="medium"> <b class="date">{{terminStartTime | date
       :
       'dd.MM.YYYY'}}: {{terminStartTime | date :
       'HH:mm'}}-{{terminEndTime | date : 'HH:mm'}}</b></ion-text><br />
