--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
@@ -15,12 +15,16 @@
 }
 
 .green{
-  color: white;
+  color: var(--ion-text-color);
   //color: rgb(25, 255, 45);
 }
 
 .ion-text-wrap{
   font-size: 14px;
+}
+
+.date {
+  color: var(--ion-text-color);
 }
 
 .image{
