--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/login/login.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/login/login.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Login</ion-title>
+    <ion-title style="color: white">Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
