--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/verify-email-info/verify-email-info.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/verify-email-info/verify-email-info.component.scss
@@ -48,8 +48,5 @@ ion-content {
 }
 
 .back-to-login-button{
-  position: absolute;
-  bottom: 32px;
-  left: 0;
-  right: 0;
+  padding-top: 32px;
 }
