Added image for dashboard

--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/side-menu/side-menu.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/side-menu/side-menu.component.html
@@ -3,8 +3,7 @@
     <div class="logo-container">
       <img class="logo" src="/assets/tvjahnlogo.png" alt="">
     </div>
-    <div class="user-name">Tv Jahn Bockum App</div>
-    <!-- <div class="user-mail">Tv Jahn Bockum</div> -->
+    <div class="user-name">TV Jahn Bockum App</div>
   </div>
 
 
