Added Test docker-compose and test email service

--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/create-termin-modal/create-termin-modal.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/create-termin-modal/create-termin-modal.component.html
@@ -74,7 +74,7 @@
 
       <ion-list class="mg-top">
         <ion-list-header color="tertiary">
-          <ion-label>Treffpunkt</ion-label>
+          <ion-label style="color: white;">Treffpunkt</ion-label>
         </ion-list-header>
         <ion-item>
           <ion-input formControlName="straße" labelPlacement="stacked" label="Straße" placeholder="Straße"></ion-input>
