--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/theme/variables.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/theme/variables.scss
@@ -114,6 +114,9 @@
   --ion-toolbar-background: #ffffff;
   --ion-tab-bar-background: #ffffff;
   --ion-card-background: #ffffff;
+
+  --ion-notification-background-unread: #e7e7e7;
+  --ion-notification-background-read: #ffffff;
 }
 
 /*
@@ -122,6 +125,9 @@
  */
 
 .dark-theme {
+  --ion-notification-background-unread: #2a2a2a;
+  --ion-notification-background-read: #1e1e1e;
+
   /** primary **/
   --ion-color-primary: #428cff;
   --ion-color-primary-rgb: 66,140,255;
