--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/notifications/notifications.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/notifications/notifications.component.html
@@ -10,19 +10,24 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="padding-lr">
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Benachrichtigungen</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div *ngIf="isLoading" class="loading-state">
+  <div *ngIf="isLoading && !isRefreshing" class="loading-state">
     <ion-spinner></ion-spinner>
     <p>Benachrichtigungen werden geladen...</p>
   </div>
 
   <ion-list *ngIf="!isLoading">
-    <ion-item *ngFor="let notification of notifications" [class.unread]="!notification.isRead" button="true" (click)="markAsRead(notification)">
+    <ion-item *ngFor="let notification of notifications" [class.unread]="!notification.isRead" button="true"
+              (click)="markAsRead(notification)">
       <ion-icon
         slot="start"
         [name]="getNotificationIcon(notification.type)"
@@ -31,7 +36,8 @@
 
       <ion-label class="ion-text-wrap">
         <h2 class="title-with-icon">
-          <ion-icon *ngIf="notification.terminId" name="calendar-outline" size="small" (click)="navigateToTermin(notification.terminId)" class="termin-button"></ion-icon>
+          <ion-icon *ngIf="notification.terminId" name="calendar-outline" size="small"
+                    (click)="navigateToTermin(notification.terminId)" class="termin-button"></ion-icon>
           <span>{{ notification.title }}</span>
         </h2>
         <p style="font-size: 13px; margin-bottom: 0px;">{{ notification.message }}</p>
