--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/notifications/notifications.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/notifications/notifications.component.html
@@ -25,26 +25,34 @@
     <p>Benachrichtigungen werden geladen...</p>
   </div>
 
-  <ion-list *ngIf="!isLoading">
-    <ion-item *ngFor="let notification of notifications" [class.unread]="!notification.isRead" button="true"
-              (click)="markAsRead(notification)">
-      <ion-icon
-        slot="start"
-        [name]="getNotificationIcon(notification.type)"
-        [color]="getIconColor(notification.type, notification.urgency)">
-      </ion-icon>
+  <div *ngIf="!isLoading">
+    <div *ngFor="let group of groupedNotifications">
+      <div class="date-separator">
+        <span>{{ group.displayDate }}</span>
+      </div>
 
-      <ion-label class="ion-text-wrap">
-        <h2 class="title-with-icon">
-          <ion-icon *ngIf="notification.terminId" name="calendar-outline" size="small"
-                    (click)="navigateToTermin(notification.terminId)" class="termin-button"></ion-icon>
-          <span>{{ notification.title }}</span>
-        </h2>
-        <p style="font-size: 13px; font-weight: 600; margin-bottom: 0px;">{{ notification.message }}</p>
-        <ion-note class="createdAt">{{ notification.createdAt | date:'dd.MM.yyyy HH:mm' }}</ion-note>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+      <ion-list>
+        <ion-item *ngFor="let notification of group.notifications" [class.unread]="!notification.isRead" button="true"
+                  (click)="markAsRead(notification)">
+          <ion-icon
+            slot="start"
+            [name]="getNotificationIcon(notification.type)"
+            [color]="getIconColor(notification.type, notification.urgency)">
+          </ion-icon>
+
+          <ion-label class="ion-text-wrap">
+            <h2 class="title-with-icon">
+              <ion-icon *ngIf="notification.terminId" name="calendar-outline" size="small"
+                        (click)="navigateToTermin(notification.terminId)" class="termin-button"></ion-icon>
+              <span>{{ notification.title }}</span>
+            </h2>
+            <p>{{ notification.message }}</p>
+            <ion-note class="createdAt">{{ notification.createdAt | date:'HH:mm' }}</ion-note>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </div>
+  </div>
 
   <div *ngIf="!isLoading && notifications.length === 0" class="empty-state">
     <ion-icon name="notifications-outline" size="large"></ion-icon>
