--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/side-menu/side-menu.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/side-menu/side-menu.component.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 0px 0px 8px 0px;
+  padding-top: env(safe-area-inset-top, 0px);
   border-bottom: 1px solid #ffffff47;
 
   .user-name{
