--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/history-termin-liste/history-termin-liste.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/history-termin-liste/history-termin-liste.component.html
@@ -12,6 +12,7 @@
         [terminArt]="termin.terminArt" [terminStartTime]="termin.startZeit" [image]="termin.image"
         [terminEndTime]="termin.endZeit" [noResponse]="termin.noResponse" [positiveResponse]="termin.positiveResponse"
         [negativeResponse]="termin.negativeResponse" [istAnwesend]="termin.istAnwesend" [highAuth]="canCreateNewTermin"
+        [fristAsDate]="termin.fristAsDate" [ersteWarnungVorFristAsDate]="termin.ersteWarnungVorFristAsDate"
         (openTermin)="openTermin(termin.terminId)">
       </app-termin-item>
 
