--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.html
@@ -11,6 +11,7 @@
         [terminArt]="termin.terminArt" [terminStartTime]="termin.startZeit"
         [terminEndTime]="termin.endZeit" [noResponse]="termin.noResponse" [positiveResponse]="termin.positiveResponse"
         [negativeResponse]="termin.negativeResponse" [image]="termin.image" [istAnwesend]="termin.istAnwesend" [highAuth]="canCreateNewTermin"
+        [fristAsDate]="termin.fristAsDate" [ersteWarnungVorFristAsDate]="termin.ersteWarnungVorFristAsDate"
         (openTermin)="openTermin(termin.terminId)">
       </app-termin-item>
 
